plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.serbekun'
version = 'pre-alpha-2026-08-20'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

def generatedResourcesDir = layout.buildDirectory.dir('generated-resources')

tasks.register('generateVersionProperties') {
    def outputDir = generatedResourcesDir
    def projectVersion = project.version.toString()
    inputs.property('version', projectVersion)
    outputs.dir(outputDir)
    doLast {
        def file = outputDir.get().file('com/serbekun/bunkasai/version.properties').asFile
        file.parentFile.mkdirs()
        file.text = "version=${projectVersion}\n"
    }
}

sourceSets.main.output.dir(generatedResourcesDir, builtBy: 'generateVersionProperties')

dependencies {

    implementation 'io.javalin:javalin:6.7.0'

    implementation 'com.samskivert:jmustache:1.16'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2'

    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.14'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'io.javalin:javalin-testtools:6.7.0'
}

application {
    mainClass = 'com.serbekun.Main'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
}
